tests/baselines/reference/invalidThrowStatement.errors.txt
invalidThrowStatement.ts(1,6): error TS1109: Expression expected.
invalidThrowStatement.ts(3,1): error TS1128: Declaration or statement expected.


==== invalidThrowStatement.ts (2 errors) ====
    throw; 
         ~
!!! error TS1109: Expression expected.
    
    export throw null;
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
    